<resources>
    <string name="app_name">FlightDeck</string>
    <string name="flight_information">Flight Information</string>
    <string name="flight_number_label">Flight number</string>
    <string name="flight_number_value">SK 482</string>
    <string name="departure_title">Departure</string>
    <string name="departure_airport_code">JED</string>
    <string name="departure_time">08:45</string>
    <string name="arrival_title">Arrival</string>
    <string name="arrival_airport_code">RUH</string>
    <string name="arrival_time">10:20</string>
</resources>
